
- ZON-2637: Enable ad-label on framebuilder

- ZON-2772: Ad tags for AMP article

- ZON-2481: Implement topiclinks for all campus content types

- BUG-282: Join query strings for feed URLs with tracking params

- MAINT: Disuse rsynced node-comment-statistics in favor of API endpoint

- FIX: Don't accidentally create missing image variants in ZMO


2.56.1 (2016-02-17)
-------------------

- HOTFIX: Pagination for author index


2.56 (2016-02-17)
-----------------

- ZON-2507: Implement zeit campus groundwork (behind a feature toggle)

- ZON-2806: Add product.title as author fallback to AMPages

- ZON-2581: Track ad start events to webtrekk

- ZON-2805: Load distinct brightcove player in AMPages

- ZON-2807: Validate AMP microdata

- ZON-2838: Author index with teasers and alphabetical navigation

- FIX: Don't try to re-raise interrupts, just let them slip by

- FIX: Write adcontroller level4 if applicable

- MAINT: Make solr timeout configurable

- MAINT: Make CP modules to preserve on pagination configurable

- MAINT: Migrate column teaser to new image delivery stack

- MAINT: Update schema.org microdata


2.55 (2016-02-09)
-----------------

- MAINT: Refactor printkiosk

- MAINT: Add enhanced window.Zeit javascript module to ZMO

- HOTFIX: Correctly parse jinja profiler toggle value

- ZON-2783: Add open graph sharing image width and height metadata

- ZON-2601: Add sharing links and article tags to AMPages

- ZON-2602: Add Nextread and Verlags-Nextread to AMPages

- ZON-2710: Use external SVG sprite in ZMO

- ZON-2732: Move celeraone device detection header setting to varnish

- ZON-2536: Move generic image assets to core module

- ZON-2692: Add instantarticle author fallback and local image captions

- ZON-2692: Remove instantarticle with missing block implementations from feed

- ZON-2613: Implement author teaser

- FIX: Unobtrusive loading of CeleraOne tracking script

- SUGAR: Implement assignment-conditional require blocks in jinja
